# qwen-2-sdk

./: CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/qwen2/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  settings.gradle.kts
java/runapi-qwen-2/: build.gradle.kts
java/runapi-qwen-2/src/main/java/ai/runapi/qwen2/: Qwen2Client.java
java/runapi-qwen-2/src/main/java/ai/runapi/qwen2/resources/: EditImageResource.java  Qwen2Resource.java  RemixImageResource.java  TextToImageResource.java
java/runapi-qwen-2/src/test/java/ai/runapi/qwen2/: Qwen2ClientTest.java  Qwen2LiveApiSmokeTest.java  Qwen2LocalApiSmokeTest.java
js/: README.md  package.json
js/skills/qwen-2/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: edit-image.ts  image-to-image.ts  remix-image.ts  text-to-image.ts
js/tests/unit/: client.test.ts  edit-image.test.ts  image-to-image.test.ts  remix-image.test.ts  text-to-image.test.ts
python/: README.md  pyproject.toml
python/src/runapi/qwen_2/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/qwen_2/resources/: __init__.py  edit_image.py  remix_image.py  text_to_image.py
python/tests/: test_client.py
ruby/: README.md  runapi-qwen-2.gemspec  runapi-qwen_2.gemspec
ruby/lib/: runapi-qwen_2.rb
ruby/lib/runapi/: qwen_2.rb
ruby/lib/runapi/qwen_2/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/qwen_2/resources/: edit_image.rb  image_to_image.rb  remix_image.rb  text_to_image.rb
(+16 files in other folders)
